--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <img src="./assets/logo/logo.png" alt="">
+            </div>
+            <div class="nav-list">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Service</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
