banner section addeded

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
                 </ul>
             </div>
         </nav>
+        <div class="banner-container">
+            <div>
+                <div class="banner-info">
+                    <h2 class="title"><span class="primary">Digital</span> Agency You <br> Can Rely ON!!</h2>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur hic laboriosam esse explicabo magni expedita odit porro illo perferendis, alias recusandae dolor officia, harum magnam iste sapiente ea, cum quis ut vitae autem officiis? Maxime possimus quod, quas aliquam voluptatibus totam aliquid nisi iste in nesciunt ratione consectetur! Molestiae.</p>
+                    <button class="btn bg-primary">Discover More</button>
+                    <button class="btn">Hire Us</button>
+                </div>
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
