--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
     <header>
         <nav class="nav-container">
@@ -25,14 +27,44 @@
             <div>
                 <div class="banner-info">
                     <h2 class="title"><span class="primary">Digital</span> Agency You <br> Can Rely ON!!</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur hic laboriosam esse explicabo magni expedita odit porro illo perferendis, alias recusandae dolor officia, harum magnam iste sapiente ea, cum quis ut vitae autem officiis? Maxime possimus quod, quas aliquam voluptatibus totam aliquid nisi iste in nesciunt ratione consectetur! Molestiae.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde consectetur hic
+                        laboriosam esse explicabo magni expedita odit porro illo perferendis, alias recusandae dolor
+                        officia, harum magnam iste sapiente ea, cum quis ut vitae autem officiis? Maxime possimus quod,
+                        quas aliquam voluptatibus totam aliquid nisi iste in nesciunt ratione consectetur! Molestiae.
+                    </p>
                     <button class="btn bg-primary">Discover More</button>
                     <button class="btn">Hire Us</button>
                 </div>
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="main-container">
+            <div class="main-text">
+                <button>Service List</button>
+                <h2>Services We Can Help You !</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eligendi perferendis quaerat eum.
+                    <br> Quos cupiditate pariatur ut expedita eum! Repudiandae vel qui quibusdam itaque corrupti.</p>
+                <ol>
+                    <li>1.Nobis ridiculus cupiditate egestas commodi.</li>
+                    <li>2.Ipsum dui curabitur dapibuish mollitia.</li>
+                </ol>
+            </div>
+            <div class="main-images">
+                <div class="all-box">
+                    <div class="box">
+                        <img class="icon" src="/assets/icons/bar-chart.png" alt="">
+                        <h3>Web Development</h3>
+                    </div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                    <div class="box"></div>
+                </div>
+
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
+
 </html>
