--- a/index.html
+++ b/index.html
@@ -43,22 +43,43 @@
             <div class="main-text">
                 <button>Service List</button>
                 <h2>Services We Can Help You !</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eligendi perferendis quaerat eum.
+                <p class="main-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eligendi perferendis quaerat eum.
                     <br> Quos cupiditate pariatur ut expedita eum! Repudiandae vel qui quibusdam itaque corrupti.</p>
                 <ol>
                     <li>1.Nobis ridiculus cupiditate egestas commodi.</li>
                     <li>2.Ipsum dui curabitur dapibuish mollitia.</li>
                 </ol>
+                <div class="author-container">
+                    <div class="author-profile">
+                        <img class="author-img" src="/assets/image/author.jpg" alt="">
+                        <h4>George Smith</h4>
+                        <h4>CEO, Director</h4>
+                    </div>
+                    <div class="author-button">
+                        <button>Hire Us Now</button>
+                    </div>
+                </div>
             </div>
             <div class="main-images">
-                <div class="all-box">
+                <div class="boxes-1">
                     <div class="box">
                         <img class="icon" src="/assets/icons/bar-chart.png" alt="">
                         <h3>Web Development</h3>
                     </div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
+                    <div class="box">
+                        <img class="icon" src="/assets/icons/bar-chart.png" alt="">
+                        <h3>Web Development</h3>
+                    </div>
+                </div>
+                <div class="boxes-1">
+                    <div class="box">
+                        <img class="icon" src="/assets/icons/bar-chart.png" alt="">
+                        <h3>Web Development</h3>
+                    </div>
+                    <div class="box">
+                        <img class="icon" src="/assets/icons/bar-chart.png" alt="">
+                        <h3>Web Development</h3>
+                    </div>
                 </div>
 
             </div>
