--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
     <main>
         <div class="main-container">
             <div class="main-text">
-                <button>Service List</button>
-                <h2>Services We Can Help You !</h2>
+                <button class="btn bg-primary">Service List</button>
+                <h2 class="main-title">Services We Can Help You !</h2>
                 <p class="main-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eligendi perferendis quaerat eum.
                     <br> Quos cupiditate pariatur ut expedita eum! Repudiandae vel qui quibusdam itaque corrupti.</p>
                 <ol>
-                    <li>1.Nobis ridiculus cupiditate egestas commodi.</li>
-                    <li>2.Ipsum dui curabitur dapibuish mollitia.</li>
+                    <li>Nobis ridiculus cupiditate egestas commodi.</li>
+                    <li>Ipsum dui curabitur dapibuish mollitia.</li>
                 </ol>
                 <div class="author-container">
                     <div class="author-profile">
                         <img class="author-img" src="/assets/image/author.jpg" alt="">
-                        <h4>George Smith</h4>
-                        <h4>CEO, Director</h4>
+                        <h4>George Smith <br> CEO, Director</h4> 
+                        
                     </div>
                     <div class="author-button">
-                        <button>Hire Us Now</button>
+                        <button class="btn">Hire Us Now</button>
                     </div>
                 </div>
             </div>
