appoint sec addeded

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
 
             </div>
         </div>
+        <div class="appointment-container">
+            <div class="phone-call">
+                <img class="phone-img" src="/assets/icons/phone-call.png" alt="">
+                <h5>Get a Free <br> Consultation <br> 883 9929 002</h5>
+            </div>
+            <div class="appointment-description">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Quis id molestiae ipsum ab suscipit laudantium repudiandae, <br> soluta adipisci illum at!</p>
+            </div>
+            <div class="appointment-button">
+                <button class="btn">Make Appointment</button>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
